--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -729,6 +729,8 @@ spa:
       items:
         # activity_margin: "Interventions par activité"
         # manure_management_plan: "Plan de fumure"
+        # phytosanitary_registry: "Registre phytosanitaire"
+        # profit_and_loss_statement: "Compte de résultat"
         # veterinary_booklet: "Carnet vétérinaire"
     entity_natures:
       items:
