introduce import method and nomenclature for variant.

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -754,6 +754,8 @@ eng:
       items:
         # activity_margin: "Interventions par activité"
         # manure_management_plan: "Plan de fumure"
+        # phytosanitary_registry: "Registre phytosanitaire"
+        # profit_and_loss_statement: "Compte de résultat"
         # veterinary_booklet: "Carnet vétérinaire"
     entity_natures:
       items:
@@ -817,6 +819,7 @@ eng:
         inhibitors_presence: "Inhibitors presence"
         # isu_index: "Index génétique ISU"
         lipolysis: "Lipolysis"
+        # livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Mammalia lactation state"
         mammalia_reproduction_state: "Mammalia reproduction state"
         # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
@@ -959,6 +962,107 @@ eng:
         treatment: "Treatment"
         # viviparous_birth: "Reproduction (vivipare)"
       name: "Name"
+    product_nature_variants:
+      attributes:
+        # frozen_indicators: "Indicateurs fixes"
+        # nature: "Type de produit"
+        # unit_name: "Nom de l'unité"
+      choices:
+        unit_name:
+          # 100g_dose: "dose de 100g"
+          # 10ml_dose: "dose de 10ml"
+          # 1l_dose: "dose de 1litre"
+          # 25kg_bag: "sac de 25kg"
+          # bag: "sac"
+          # box: "boîte"
+          # building: "bâtiment"
+          # can: "bidon"
+          # cubic_meter: "mètre cube"
+          # equipment: "equipement"
+          # head: "tête"
+          # hectare: "hectare(s)"
+          # hour: "heure"
+          # kilogram: "kilogramme(s)"
+          # land_parcel: "parcelle"
+          # liter: "litre(s)"
+          # person: "personne"
+          # room: "pièce"
+          # ton: "tonne(s)"
+          # unit: "unité"
+      items:
+        # additive: "Adjuvant"
+        # animal_building: "Bâtiment d'accueil pour les animaux"
+        # animal_medicine: "Produit vétérinaire"
+        # anti_slug: "Anti-limace"
+        # baler: "Botteleuse"
+        # barley_crop: "Culture d'orge"
+        # barley_seed_25: "Semence d'orge 25kg"
+        # brassicaceae_fungicide: "Fongicide colza"
+        # building: "Bâtiment"
+        # building_division: "Pièce ou zone d'un bâtiment"
+        # bulk_ammonitrate_33: "Engrais Ammonitrate 33% Vrac"
+        # bulk_hay: "Foin Vrac"
+        # bulk_urea_46: "Engrais Urée 46% VRAC"
+        # calf: "Veau"
+        # cattle_herd: "Troupeau de bovins"
+        # cattle_manure: "Fumier de bovins"
+        # chemical_fertilizer: "Engrais chimique"
+        # complete_herbicide: "Herbicide total"
+        # corn_crop: "Culture de maïs"
+        # corn_grain: "Graine de maïs"
+        # cow_milk: "Lait de vache"
+        # cultivable_land_parcel: "Parcelle culturale"
+        # durum_wheat_crop: "Culture de blé dur"
+        # equipment: "Équipement"
+        # ewe_milk: "Lait de brebis"
+        # fallow_crop: "Jachère"
+        # feed: "Aliment du bétail"
+        # female_adult_cow: "Vache"
+        # female_young_cow: "Génisse"
+        # goat_milk: "Lait de chèvre"
+        # grain: "Graine"
+        # grass: "Herbe"
+        # hard_wheat_seed_25: "Semence de blé dur 25kg"
+        # hay_rake: "Andaineur"
+        # helianthus_herbicide: "Herbicide tournesol"
+        # insecticide: "Insecticide"
+        # land_parcel: "Parcelle"
+        # land_parcel_cluster: "Ilôt"
+        # male_adult_cow: "Taureau"
+        # male_young_cow: "Taurillon"
+        # manager: "Responsable"
+        # manure: "Fumier"
+        # mineral_cleaner: "Nettoyant chimique"
+        # mineral_fertilizer: "Engrais minéral"
+        # molluscicide: "Molluscicide"
+        # mower: "Faucheuse"
+        # office_building: "Bureau"
+        # organic_fertilizer: "Engrais organique"
+        # other_herbicide: "Herbicide autre"
+        # plow: "Charrue"
+        # poacea_herbicide: "Herbicide graminées"
+        # poaceae_fungicide: "Fongicide céréales"
+        # screed_building: "Construction béton (silo, chape, terrasse)"
+        # seed: "Semence"
+        # silage: "Ensilage"
+        # small_equipment: "Petit matériel"
+        # sorghum_crop: "Culture de sorgho"
+        # sower: "Semoir"
+        # spelt_wheat_crop: "Culture d'épeautre"
+        # spread_renting: "Location d'épandeur"
+        # spreader: "Epandeur à engrais"
+        # straw: "Paille"
+        # sunflower_crop: "Culture de tournesol"
+        # technician: "Technicien"
+        # temporary_meadow_crop: "Culture de prairie temporaire"
+        # tractor: "Tracteur"
+        # trailer: "Remorque"
+        # wheat_crop: "Culture de blé"
+        # wheat_grain: "Graine de blé"
+        # wheat_seed_25: "Semence de blé 25kg"
+        # wheat_straw: "Paille de blé"
+        # zea_herbicide: "Herbicide maïs"
+      # name: "Type de produits"
     product_natures:
       attributes:
         abilities: "Abilities"
@@ -969,7 +1073,7 @@ eng:
         charge_account: "Charge account"
         depreciable: "Depreciable"
         derivative: "Derivative"
-        frozen_indicators: "Frozen indicators"
+        frozen_indicators: "Frozen indicators" #?
         indicators: "Indicators"
         number: "Number"
         product_account: "Product account"
@@ -979,22 +1083,10 @@ eng:
         stock_account: "Stock account"
         storable: "Storable"
         unit: "Unit"
-        # unit_name: "Nom de l'unité"
         variety: "Variety"
-      choices:
-        unit_name:
-          # bag: "sac"
-          # box: "boîte"
-          # can: "bidon"
-          # cubic_meter: "mètre cube"
-          # head: "tête"
-          # hectare: "hectare"
-          # hour: "heure"
-          # kilogram: "kilogramme"
-          # liter: "litre"
-          # ton: "tonne"
-          # unit: "unité"
+      choices: #?
       items:
+        # additive: "Adjuvant"
         adult_cow: "Adult cow" #?
         all_in_one_equipment: "All in one equipment" #?
         # animal_building: "Bâtiment d'accueil pour les animaux"
@@ -1030,6 +1122,7 @@ eng:
         milk: "Milk"
         # mineral_cleaner: "Nettoyant chimique"
         # mineral_fertilizer: "Engrais minéral"
+        # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
         # office_building: "Bureau"
         # organic_fertilizer: "Engrais organique"
