Redirects on product_natures#new if no variant for products#new

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1646,6 +1646,7 @@ eng:
     valid: "Valid"
     validate: "Validate"
     validate_selected_entries: "Validate selected entries"
+    # variants: "Variantes"
     # vat: "Taxe à payer"
     # vat_acquisitions: "Acquisitions intracommunautaires"
     # vat_amount: "Taxe due"
