--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1889,6 +1889,7 @@ arb:
     valid: "الصلاحية"
     validate: "التعديل"
     validate_selected_entries: "التحقق من المدخلات المختارة"
+    # variants: "Variantes"
     vat: "الضريبة المستحقة"
     vat_acquisitions: "المكاسب الداخلية"
     vat_amount: "الضرائب المستحقة"
