--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1699,6 +1699,7 @@ fra:
     valid: "Valider"
     validate: "Valider"
     validate_selected_entries: "Valider les écritures sélectionnées"
+    variants: "Variantes"
     vat: "Taxe à payer"
     vat_acquisitions: "Acquisitions intracommunautaires"
     vat_amount: "Taxe due"
