finalize variant XML nomen and passing demo task

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2759,7 +2759,7 @@ arb:
     production:
       # bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
       label: #?
-      # name: "%{product_nature}/%{activity} %{campaign} (%{state})"
+      # name: "%{variant}/%{activity} %{campaign} (%{state})"
       states:
         # aborted: "Annulée"
         # draft: "Prévue"
