rename activity margin aggregator and add some categories

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -715,12 +715,14 @@ fra:
         ZWL: "Dollar zimbabwéen"
     document_categories:
       items:
+        accountancy: "Comptabilité"
+        management: "Gestion"
         animal_farming: "Elevage"
         health: "Santé - Hygiène"
         land_parcel_management: "Conduite de la parcelle"
     document_natures:
       items:
-        activity_margin: "Interventions par activité"
+        activity_cost: "Coût de production par activité et intervention"
         animal_husbandry_registry: "Registre d'élevage"
         manure_management_plan: "Plan de fumure"
         phytosanitary_registry: "Registre phytosanitaire"
