--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -430,7 +430,7 @@ fra:
     arrival_cause: "Cause d’entrée"
     arrived_on: "Date d’entrée"
     asset: "Immobilisation"
-    # asset_account: "Asset account"
+    asset_account: "Asset account"
     asset_amount: "Valeur nette comptable"
     asset_depreciations: "Dépréciations d’immobilisation"
     assets: "Immobilisations" #?
