--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -500,7 +500,11 @@ spa:
     backend/product_memberships: #?
     backend/product_moves: #?
     backend/product_nature_abilities: #?
-    backend/product_nature_categories: #?
+    backend/product_nature_categories:
+      # edit: "Modifier la catégorie du produit\_: %{name}"
+      # index: "Catégories de produits"
+      # new: "Nouvelle catégorie"
+      # show: "Catégorie de produit\_: %{name}"
     backend/product_nature_components: #?
     backend/product_nature_indicators: #?
     backend/product_nature_prices: #?
