--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -474,6 +474,7 @@ spa:
     # arrival_cause: "Cause d’entrée"
     # arrived_on: "Date d’entrée"
     # asset: "Immobilisation"
+    # asset_account: "Asset account"
     # asset_amount: "Valeur nette comptable"
     # asset_depreciations: "Dépréciations d’immobilisation"
     # assets: "Immobilisations"
