Fixes Intervention#run in the simpliest way

--- a/config/locales/arb/procedures.yml
+++ b/config/locales/arb/procedures.yml
@@ -1,29 +1,29 @@
 arb:
   procedo:
     actions:
-      # assisted_measure: "%{reporter} mesure %{indicator} avec %{tool}"
-      # attachment: "%{carrier} s'attache à %{carried}"
+      # assisted_measurement: "%{reporter} mesure %{indicator} avec %{tool}"
+      # attachment: "On attache %{carrier} et %{carried}"
       # browsing: "%{browser} parcourt %{browsed}"
-      # consumption: "%{product} consomme %{consumable}"
-      # death: "%{product} meurt"
-      # detachment: "%{carrier} se détache de %{carried}"
-      # division: "%{product} se sépare de %{parted}"
+      # consumption: "%{product} consomme %{dead}"
+      # death: "%{dead} meurt"
+      # detachment: "On détache %{carrier} et %{carried}"
+      # division: "%{born} est séparé de %{product}"
+      # entering: "%{product} entre dans %{localizable}"
+      # given_home_coming: "%{product} va l'emplacement par défaut de  %{localizable}"
       # group_exclusion: "%{member} sort du groupe %{group}"
       # group_inclusion: "%{member} entre dans le groupe %{group}"
+      # home_coming: "%{product} va à son emplacement par défaut"
       # identified_incoming_delivery: "%{product} est réceptionné du %{supplier}"
       # identified_outgoing_delivery: "%{product} est expédié à %{client}"
       # incoming_delivery: "%{product} est réceptionné"
-      # measure: "%{reporter} mesure %{indicator}"
-      # merging: "%{product} fusionne avec %{merged}"
-      # move_in: "%{product} va dans %{localizable}"
-      # move_in_default_storage: "%{product} va à son emplacement par défaut"
-      # move_in_given_default_storage: "%{product} va l'emplacement par défaut de  %{localizable}"
-      # move_to: "%{product} va à l'emplacement de %{localizable}"
+      # measurement: "%{reporter} mesure %{indicator}"
+      # merging: "%{product} fusionne avec %{dead}"
+      # movement: "%{product} va à l'emplacement de %{localizable}"
       # outgoing_delivery: "%{product} est expédié"
       # owner_change: "%{product} change de propriétaire pout %{owner}"
       # ownership_loss: "%{product} perd son propriétaire"
-      # production: "%{product} produit %{producible}"
-      # simple_measure: "%{indicator} est mesuré"
+      # production: "%{product} produit %{born}"
+      # simple_measurement: "%{indicator} est mesuré"
   procedures:
     # animal_birth: "Naissance d’un animal"
     # animal_treatment: "Traitement animal"
