--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -554,7 +554,9 @@ fra:
     currency_rate: "Taux de change"
     current_amount: "Montant actuel"
     current_animal_disease_state: "Etat de santé actuel" #?
+    current_localization: "Current localization"
     current_net_weight: "Dernière pesée" #?
+    current_ownership: "Current ownership"
     current_phase: "Current phase"
     # current_sign_in_at: "Current sign in at"
     # current_sign_in_ip: "Current sign in ip"
