--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1189,7 +1189,9 @@ arb:
     # current_amount: "Montant actuel"
     # current_animal_disease_state: "Etat de santé actuel"
     current_financial_year: "الفترة المحاسبية الحالية" #?
+    # current_localization: "Current localization"
     # current_net_weight: "Dernière pesée"
+    # current_ownership: "Current ownership"
     # current_phase: "Current phase"
     custom_field: "حقول اضافية"
     custom_field_choices: "اختيارات الحقول الاضافية"
