--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -587,7 +587,9 @@ spa:
     # currency_rate: "Taux de change"
     # current_amount: "Montant actuel"
     # current_animal_disease_state: "Etat de santé actuel"
+    # current_localization: "Current localization"
     # current_net_weight: "Dernière pesée"
+    # current_ownership: "Current ownership"
     # current_phase: "Current phase"
     # custom_field: "Champ complémentaire"
     # custom_field_choices: "Choix de champ complémentaire"
