Removes files copies of legals_entities and people

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -418,7 +418,7 @@ eng:
       # edit: "Modifier la personne\_: %{name}"
       # index: "Personnes"
       # new: "Nouvelle personne"
-      # show: "Personne\_: %{name}"
+      # show: "Personne\_: %{full_name}"
     backend/plant_medicines:
       edit: "Edit plant medicine\_: %{name}"
       index: "Plant medicines"
