--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -937,6 +937,7 @@ eng:
     contextual_help: "Help on current page"
     coordinates: "Coordinates"
     copy_of: "Copy of %{source}"
+    # cost: "Coût"
     cost_income_statement: "Cost Income Statement"
     cost_sum: "Total Cost"
     counts_by_nature: "Number of documents to account per type"
@@ -1547,6 +1548,7 @@ eng:
     # sowable: "Semable"
     start: "From"
     state: "State"
+    # stock: "Stock"
     stock_max: "Stock max"
     stock_min: "Stock min"
     # stock_of_x: "Stock de %{x}"
