--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2048,44 +2048,56 @@ arb:
         # sales_invoice: "Création d’une facture"
     intervention:
       nomen:
-        # animal_birth: "Naissance d’un animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plowing: "Labour"
-        # seed_harvest: "Moisson"
-        # sowing: "Semis"
-        # superficial_plowing: "Hersage"
-        # wheat_crop: "Culture de blé (standard)"
-      procedure:
-        # animal_birth: "Naissance d’un animal"
+        # animal_milking: "Traite"
         # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
-        # grains_harvest: "Moisson"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plowing: "Labour"
-        # raking: "Hersage"
-        # sowing: "Semis"
-      procedures:
-        # animal_birth: "Naissance d’un animal"
-        # animal_treatment: "Traitement animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
         # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
         # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
         # plowing: "Labour"
         # raking: "Hersage"
         # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
         # superficial_plowing: "Hersage"
-        # wheat_crop: "Culture de blé (standard)"
+      procedure:
+        # animal_milking: "Traite"
+        # animal_treatment: "Traitement animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # grains_harvest: "Moisson"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
+        # plowing: "Labour"
+        # raking: "Hersage"
+        # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
+        # superficial_plowing: "Hersage"
+      procedures:
+        # animal_milking: "Traite"
+        # animal_treatment: "Traitement animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # grains_harvest: "Moisson"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
+        # plowing: "Labour"
+        # raking: "Hersage"
+        # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
+        # superficial_plowing: "Hersage"
       state:
         # done: "Réalisée"
         # in_progress: "En cours"
@@ -2147,17 +2159,22 @@ arb:
     per_frequency_time_unit: #?
     procedure:
       nomen:
-        # animal_birth: "Naissance d’un animal"
+        # animal_milking: "Traite"
+        # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
         # plowing: "Labour"
-        # seed_harvest: "Moisson"
+        # raking: "Hersage"
         # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
         # superficial_plowing: "Hersage"
-        # wheat_crop: "Culture de blé (standard)"
       state:
         # done: "Réalisée"
         # in_progress: "En cours"
