--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1612,44 +1612,56 @@ eng:
         sales_invoice: "Creation of a sales invoice"
     intervention:
       nomen:
-        # animal_birth: "Naissance d’un animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plowing: "Labour"
-        # seed_harvest: "Moisson"
-        # sowing: "Semis"
-        # superficial_plowing: "Hersage"
-        # wheat_crop: "Culture de blé (standard)"
-      procedure:
-        # animal_birth: "Naissance d’un animal"
+        # animal_milking: "Traite"
         # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
-        # grains_harvest: "Moisson"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plowing: "Labour"
-        # raking: "Hersage"
-        # sowing: "Semis"
-      procedures:
-        # animal_birth: "Naissance d’un animal"
-        # animal_treatment: "Traitement animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
         # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
         # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
         # plowing: "Labour"
         # raking: "Hersage"
         # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
         # superficial_plowing: "Hersage"
-        # wheat_crop: "Culture de blé (standard)"
+      procedure:
+        # animal_milking: "Traite"
+        # animal_treatment: "Traitement animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # grains_harvest: "Moisson"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
+        # plowing: "Labour"
+        # raking: "Hersage"
+        # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
+        # superficial_plowing: "Hersage"
+      procedures:
+        # animal_milking: "Traite"
+        # animal_treatment: "Traitement animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # grains_harvest: "Moisson"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
+        # plowing: "Labour"
+        # raking: "Hersage"
+        # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
+        # superficial_plowing: "Hersage"
       state:
         done: "Done"
         in_progress: "In progress"
@@ -1715,17 +1727,22 @@ eng:
     per_frequency_time_unit: #?
     procedure:
       nomen:
-        # animal_birth: "Naissance d’un animal"
+        # animal_milking: "Traite"
+        # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment: "Traitement chimique"
+        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
+        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plant_mowing: "Fauchage"
         # plowing: "Labour"
-        # seed_harvest: "Moisson"
+        # raking: "Hersage"
         # sowing: "Semis"
+        # straw_bunching: "Pressage de fourrages"
         # superficial_plowing: "Hersage"
-        # wheat_crop: "Culture de blé (standard)"
       state:
         done: "Done"
         in_progress: "In progress"
