--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -977,6 +977,7 @@ spa:
     # contextual_help: "Aide contextuelle"
     # coordinates: "Coordonnées"
     # copy_of: "Copie de %{source}"
+    # cost: "Coût"
     cost_income_statement: "Cargas"
     cost_sum: "Total cargas de explotación"
     counts_by_nature: "Nombre de piezas a contabilizar por tipo"
@@ -1599,6 +1600,7 @@ spa:
     # sowable: "Semable"
     start: "Del"
     # state: "État"
+    # stock: "Stock"
     # stock_max: "Stock maximum"
     # stock_min: "Stock minimum"
     stock_move_create: "Añadir un movimiento de deposito" #?
