--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1495,7 +1495,7 @@ eng:
     activity:
       family:
         animal: "Animal" #?
-        # cattle_farming: "Elevage bovins"
+        # cattle_farming: "Élevage bovins"
         # maize_crops: "Maïs"
         none: "None" #?
         # oilseed_crops: "Oléagineux"
@@ -1611,33 +1611,18 @@ eng:
         sale: "Creation of a sale"
         sales_invoice: "Creation of a sales invoice"
     intervention:
-      nomen:
-        # animal_milking: "Traite"
-        # animal_treatment: "Traitement animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
-        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
-        # grains_harvest: "Moisson"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plant_grinding: "Broyage de végétaux"
-        # plant_mowing: "Fauchage"
-        # plowing: "Labour"
-        # raking: "Hersage"
-        # sowing: "Semis"
-        # straw_bunching: "Pressage de fourrages"
-        # superficial_plowing: "Hersage"
+      nomen: #?
       procedure:
+        # animal_birth: "Naissance d’un animal"
         # animal_milking: "Traite"
         # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
-        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
+        # chemical_treatment: "Traitement chimique"
         # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
+        # partial_chemical_treatment: "Traitement chimique partiel"
         # plant_grinding: "Broyage de végétaux"
         # plant_mowing: "Fauchage"
         # plowing: "Labour"
@@ -1645,23 +1630,8 @@ eng:
         # sowing: "Semis"
         # straw_bunching: "Pressage de fourrages"
         # superficial_plowing: "Hersage"
-      procedures:
-        # animal_milking: "Traite"
-        # animal_treatment: "Traitement animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
-        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
-        # grains_harvest: "Moisson"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plant_grinding: "Broyage de végétaux"
-        # plant_mowing: "Fauchage"
-        # plowing: "Labour"
-        # raking: "Hersage"
-        # sowing: "Semis"
-        # straw_bunching: "Pressage de fourrages"
-        # superficial_plowing: "Hersage"
+        # wheat_crop: "Culture de blé (standard)"
+      procedures: #?
       state:
         done: "Done"
         in_progress: "In progress"
@@ -1725,29 +1695,12 @@ eng:
     per_animal_unit: #?
     per_duration_time_unit: #?
     per_frequency_time_unit: #?
-    procedure:
-      nomen:
-        # animal_milking: "Traite"
-        # animal_treatment: "Traitement animal"
-        # calving_one: "Vêlage unique"
-        # calving_twin: "Vêlage jumeaux"
-        # chemical_treatment_on_entire_culture: "Traitement chimique (toute la culture)"
-        # chemical_treatment_on_partial_culture: "Traitement chimique (une partie de la culture)"
-        # grains_harvest: "Moisson"
-        # mineral_fertilizing: "Fertilisation minérale"
-        # organic_fertilizing: "Fertilisation organique"
-        # plant_grinding: "Broyage de végétaux"
-        # plant_mowing: "Fauchage"
-        # plowing: "Labour"
-        # raking: "Hersage"
-        # sowing: "Semis"
-        # straw_bunching: "Pressage de fourrages"
-        # superficial_plowing: "Hersage"
-      state:
-        done: "Done"
-        in_progress: "In progress"
-        squeezed: "Squeezed"
-        undone: "Undone"
+    procedure:  #?
+      state: #?
+        done: "Done" #?
+        in_progress: "In progress" #?
+        squeezed: "Squeezed" #?
+        undone: "Undone" #?
     product:
       arrival_reasons:
         birth: "Birth"
@@ -1830,17 +1783,8 @@ eng:
         # decimal: "Décimal"
         # integer: "Entier"
         # unitary: "Unitaire"
-    product_nature_indicator:
-      nature:
-        # boolean: "Case à cocher"
-        # choice: "Liste de choix"
-        # decimal: "Chiffre (décimal)"
-        # measure: "Mesure"
-        # string: "Texte"
-      usage:
-        # environment: "Environnement"
-        # life: "Biologique"
-        # production: "Production"
+    product_nature_indicator:  #?
+ #?
     product_transfer:
       nature:
         gain: "Gain"
